force-app/main/default/objects/WhatsAppMetaTemplate__c/WhatsAppMetaTemplate__c.object-meta.xml
<CustomObject>
    <label>WhatsApp Meta Template</label>
    <nameField>
        <displayFormat>MT-{0000}</displayFormat>
        <label>Meta Template Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>WhatsApp Meta Templates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>