force-app/main/default/objects/WhatsAppMetaTemplate__c/fields/CorrectCategory__c.field-meta.xml
<CustomField>
    <fullName>CorrectCategory__c</fullName>
    <label>Correct Category</label>
    <length>50</length>
    <type>Text</type>
</CustomField>