force-app/main/default/objects/WhatsAppMetaTemplate__c/fields/Template_Footer__c.field-meta.xml
<CustomField>
    <fullName>Template_Footer__c</fullName>
    <label>Template Footer</label>
    <type>TextArea</type>
</CustomField>