force-app/main/default/objects/WhatsAppMetaTemplate__c/fields/Template_Header__c.field-meta.xml
<CustomField>
    <fullName>Template_Header__c</fullName>
    <label>Template Header</label>
    <type>TextArea</type>
</CustomField>