force-app/main/default/objects/WhatsAppMetaTemplate__c/fields/TemplateButtonOfferCode__c.field-meta.xml
<CustomField>
    <fullName>TemplateButtonOfferCode__c</fullName>
    <label>Template Button OfferCode</label>
    <length>100</length>
    <type>Text</type>
</CustomField>