force-app/main/default/objects/WhatsAppMetaTemplate__c/fields/TemplateButtonPhone__c.field-meta.xml
<CustomField>
    <fullName>TemplateButtonPhone__c</fullName>
    <label>Template Button Phone</label>
    <type>Phone</type>
</CustomField>