force-app/main/default/objects/WhatsAppMetaTemplate__c/fields/TemplateButtonText__c.field-meta.xml
<CustomField>
    <fullName>TemplateButtonText__c</fullName>
    <label>Template Button Text</label>
    <type>TextArea</type>
</CustomField>