force-app/main/default/objects/WhatsAppMetaTemplate__c/fields/TemplateButtonType__c.field-meta.xml
<CustomField>
    <fullName>TemplateButtonType__c</fullName>
    <label>Template Button Type</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>