force-app/main/default/objects/WhatsAppMetaTemplate__c/fields/TemplateButtonURL__c.field-meta.xml
<CustomField>
    <fullName>TemplateButtonURL__c</fullName>
    <label>Template Button URL</label>
    <type>Url</type>
</CustomField>