force-app/main/default/objects/WhatsAppMetaTemplate__c/fields/TemplateHeaderHandler__c.field-meta.xml
<CustomField>
    <fullName>TemplateHeaderHandler__c</fullName>
    <label>Template Header Handler</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>