force-app/main/default/objects/WhatsAppMetaTemplate__c/fields/TemplateHeaderText__c.field-meta.xml
<CustomField>
    <fullName>TemplateHeaderText__c</fullName>
    <label>Template Header Text</label>
    <type>TextArea</type>
</CustomField>