force-app/main/default/objects/WhatsAppMetaTemplate__c/fields/TemplateJSON__c.field-meta.xml
<CustomField>
    <fullName>TemplateJSON__c</fullName>
    <label>Template JSON</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>