force-app/main/default/objects/WhatsAppMetaTemplate__c/listViews/All1.listView-meta.xml
<ListView>
    <fullName>All1</fullName>
    <columns>NAME</columns>
    <columns>Id__c</columns>
    <columns>Template_Name__c</columns>
    <columns>Category__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>